tests/compile_fail/sort_columns_on_non_table_macro.stderr
error: `#[sort_columns]` only works on the `diesel::table!` macro
  --> $DIR/sort_columns_on_non_table_macro.rs:14:1
   |
14 | foo! {}
   | ^^^
